# ocr-module

./: .gitignore  README.md  pyproject.toml
app/: config.py  constants.py  main.py  schemas.py
app/api/: dependencies.py  endpoints.py
app/api/v1/: dependencies.py
app/api/v1/routers/: ocr.py
app/core/: config.py  constants.py
app/engine/: layout.py  parser.py  processor.py  utils.py
app/schemas/: ocr.py
app/services/: layout_service.py  ocr_service.py  parser_service.py  utils.py
tests/: test_api.py
